# imaple

./: .env-example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  default.conf  test_fetch.py
.github/: setenv.sh
.github/workflows/: deploy.yml
keys/: cert.pem  key.pem
src/: cert.rs  cmd_handlers.rs  error.rs  handlers.rs  imap.rs  imap_serv.rs  main.rs  result.rs
src/handlers/: fetch_handler.rs  mod.rs
